# sat-catalogs-cli

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/sat_catalogs/: cli.py  files.py  orm.py
src/sat_catalogs/functions/: dolibarr.py  erpnext.py  odoo.py  scripts.py
src/sat_catalogs/templates/: payment_forms.sql  units_of_measure.sql
src/sat_catalogs/templates/dolibarr/: cfdi_uses.sql  payment_forms.sql  product_service_keys.sql  relationship_types.sql  tax_systems.sql
src/sat_catalogs/templates/odoo/: tax_systems.csv
