[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sat-catalogs-scripts"
version = "0.0.1"
authors = [{ name = "Alfredo Altamirano" }]
dependencies = ["sqlalchemy>=1.4.41, <2", "click>=8.1.3, <9"]

[tool.hatch.build.targets.wheel]
packages = ["src/sat_catalogs"]

[project.scripts]
sat-catalogs = "sat_catalogs.cli:cli"
